Базовое окно для загрузки файлов. Доделать: шаблоны для кнопок управления (открытие, удаление), взаимодействие с сервером и серверные эндпойнты

--- a/frontend/src/assets/devextreme.css
+++ b/frontend/src/assets/devextreme.css
@@ -15052,7 +15052,7 @@
 }
 .dx-datagrid-nodata {
   position: absolute;
-  top: 50%;
+  top: calc(50% - 1rem);
   left: 50%;
   width: 100%;
   text-align: center;
